# rpmsg-lite

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  Kconfig.env  Kconfig.platform  LICENSE  README.md  SBOM.spdx.json  SCR.txt  customdoxygen.css  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  graph_legend.html  group__config.html  group__config.js  group__rpmsg__lite.html  group__rpmsg__lite.js  group__rpmsg__ns.html  group__rpmsg__ns.js  group__rpmsg__queue.html  group__rpmsg__queue.js  index.html  md__d_1_work_sdk-next_mcu-sdk-3_80_middleware_multicore_rpmsg-lite__r_e_a_d_m_e.html  md__home_runner_work_rpmsg_lite_rpmsg_lite__r_e_a_d_m_e.html  menudata.js  modules.html  modules.js  navtreedata.js  navtreeindex0.js  pages.html  rpmsg__default__config_8h.html  rpmsg__default__config_8h_source.html  rpmsg__lite_8h_source.html  rpmsg__ns_8h_source.html  rpmsg__queue_8h_source.html  run_clang_format.py  structrpmsg__lite__ept__static__context__coll__graph.dot  structrpmsg__lite__ept__static__context__coll__graph.md5
cmake/: env.cmake  platform.cmake
doxygen/: Doxyfile.rpmsglite  component_groups.dox  html_footer.html  mainpage_rpmsg_lite.md  rpmsg_lite_design_considerations.md  rpmsg_lite_overview.md
lib/: SConscript
search/: all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  defines_0.js  enums_0.js  files_0.js  functions_0.js  groups_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  (+8 more)
zephyr/samples/rpmsglite_pingpong/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.rst  common.h  prj.conf  rpmsg_config.h  sample.yaml  sysbuild.cmake
zephyr/samples/rpmsglite_pingpong/boards/: lpcxpresso54114_lpc54114_m4.overlay  mimxrt1170_evk_cm7.overlay  mimxrt1170_evk_mimxrt1176_cm7_B.overlay  mimxrt685_evk_mimxrt685s_cm33.overlay  mimxrt700_evk_mimxrt798s_cm33_cpu0.overlay
zephyr/samples/rpmsglite_pingpong/remote/: CMakeLists.txt  prj.conf  sample.yaml
zephyr/samples/rpmsglite_pingpong/remote/boards/: lpcxpresso55s69_lpc55s69_cpu1.overlay  mimxrt1170_evk_mimxrt1176_cm4.overlay  mimxrt1170_evk_mimxrt1176_cm4_B.overlay  mimxrt685_evk_mimxrt685s_hifi4.overlay  mimxrt700_evk_mimxrt798s_cm33_cpu1.conf  mimxrt700_evk_mimxrt798s_cm33_cpu1.overlay
zephyr/samples/rpmsglite_pingpong/remote/src/: main.c
zephyr/samples/rpmsglite_pingpong/src/: main.c
(+447 files in other folders)
